--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <header>
-      <nav id="header-nav" class="navbar navbar-expand-lg">
+        <!--creates the hamburger toggle to only show below medium (md) screen width-->
+      <nav id="header-nav" class="navbar navbar-expand-md">
         <div class="container">
          <div class="navbar-brand">
           <a  href="index.html">Food LLC</a>
@@ -28,7 +29,8 @@
           </button>
           <!--menu items. in sm, xs items in hamburger-->
           <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul id="nav-list"class="navbar-nav me-auto mb-2 mb-lg-0 d-lg-none d-xl-block d-xl-none d-xxl-block d-xxl-none">
+            <!--d-md-none etx hides the chicken, beef, sushi in the header, and only displays in the hamburger toggle-->
+            <ul id="nav-list"class="navbar-nav me-auto mb-2 mb-lg-0 d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-xxl-block d-xxl-none">
               <li >
                 <a href="#chicken" class="nav-item">Chicken</a>
               </li>
